@@ -5,6 +5,7 @@ import com.example.backend.recommend.dto.*;
 import com.example.backend.recommend.exception.RecommendErrorCode;
 import com.example.backend.recommend.infra.ai.AiResponseParser;
 import com.example.backend.recommend.infra.ai.AiServerClient;
+import com.example.backend.recommend.port.BuildingPort;
 import com.example.backend.recommend.port.CategoryPort;
 import com.example.backend.recommend.port.InOutPort;
 import com.example.backend.search.port.LoginSearchPort;
@@ -24,12 +25,14 @@ import java.util.Set;
 import java.util.LinkedHashSet;
 import java.util.HashSet;
 import java.util.stream.Stream;
-import java.util.stream.Collectors;
+
+
 
 @Service
 @RequiredArgsConstructor
 public class RecommendService {
 
+    private final BuildingPort buildingPort;
     private final InOutPort inOutPort;
     private final AiServerClient aiServerClient;
     private final AiResponseParser aiResponseParser;
@@ -38,9 +41,6 @@ public class RecommendService {
     private final SearchCategoryPort searchCategoryPort;
     private final LoginSearchPort loginSearchPort;
 
-    /**
-     * ✅ 단일 검색 - Top 20 업종 반환 및 저장
-     */
     @Transactional
     public RecommendResponse generateSingle(SingleRequest req, Long uid) {
         final BigDecimal lat = req.getLat();
@@ -54,44 +54,26 @@ public class RecommendService {
         Map<String, List<Double>> byCat = aiResponseParser.toCategoryMetricListV2(aiRaw);
         Map<String, Integer> nameToId = categoryPort.getIdsByNames(byCat.keySet());
 
-        // ✅ 3) 점수 계산 후 Top 20 선별
-        List<RecommendResponse.CategoryResult> resultList = byCat.entrySet().stream()
-                .filter(entry -> nameToId.containsKey(entry.getKey()))
-                .map(entry -> {
-                    String name = entry.getKey();
-                    List<Double> value = entry.getValue();
-                    Integer catId = nameToId.get(name);
+        List<RecommendResponse.CategoryResult> resultList = new ArrayList<>();
+        Set<Integer> cidSet = new LinkedHashSet<>();
+        byCat.forEach((name, value) -> {
+            Integer catId = nameToId.get(name);
+            if (catId == null) {
+                return;
+            }
+            inOutPort.upsert(bld.id(), catId, value);
 
-                    // DB 저장
-                    inOutPort.upsert(bld.id(), catId, value);
-
-                    // 점수 계산 (평균값)
-                    double avgScore = value.stream()
-                            .mapToDouble(Double::doubleValue)
-                            .average()
-                            .orElse(0.0);
-
-                    return new ScoredCategory(
-                            RecommendResponse.CategoryResult.builder()
-                                    .category(name)
-                                    .survivalRate(value)
-                                    .build(),
-                            avgScore
-                    );
-                })
-                .sorted((a, b) -> Double.compare(b.score, a.score)) // ✅ 점수 내림차순 정렬
-                .limit(20) // ✅ Top 20으로 변경
-                .map(scored -> scored.result)
-                .collect(Collectors.toList());
-
-        // ✅ 4) Top 20 카테고리 ID 수집
-        Set<Integer> cidSet = resultList.stream()
-                .map(result -> nameToId.get(result.getCategory()))
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-
-        if (uid != null) {
+            cidSet.add(catId);
+            resultList.add(
+                    RecommendResponse.CategoryResult.builder()
+                            .category(name)
+                            .survivalRate(value)
+                            .build()
+            );
+        });
+        if(uid != null) {
             loginSearchPort.upsertubid(uid, bld.id());
-            searchCategoryPort.upsertubcS(uid, bld.id(), cidSet); // ✅ Top 20 저장
+            searchCategoryPort.upsertubcS(uid, bld.id(), cidSet);
         }
 
         // 5) 응답
@@ -101,7 +83,7 @@ public class RecommendService {
                         .lat(bld.lat())
                         .lng(bld.lng())
                         .build())
-                .result(resultList) // ✅ Top 20 반환
+                .result(resultList)
                 .meta(RecommendResponse.RecommendMeta.builder()
                         .source(Source.AI)
                         .version("v1")
@@ -110,14 +92,11 @@ public class RecommendService {
                 .build();
     }
 
-    /**
-     * ✅ 단일 업종 - 변경 없음 (이미 1개만 반환)
-     */
     @Transactional
     public RecommendResponse generateSingleIndustry(SingleIndustryRequest req, Long uid) {
         final BigDecimal lat = req.getLat();
         final BigDecimal lng = req.getLng();
-        final String categoryName = req.getCategoryName();
+        final String categoryName = req.getCategory();
         final Integer categoryId = categoryPort.getIdByName(categoryName);
 
         // 1) 좌표 → 건물 식별
@@ -133,7 +112,7 @@ public class RecommendService {
             source = Source.DB;
         } else {
             // 3) 없으면 AI 서버 호출 → Double 파싱 후 upsert
-            JsonNode aiRaw = aiServerClient.requestCategory(bld.id(), bld.lat(), bld.lng(), categoryId);
+            JsonNode aiRaw = aiServerClient.requestCategory(bld.id(),bld.lat(), bld.lng(),categoryName);
             value = aiResponseParser.toCategoryMetricV2(aiRaw, categoryName);
             inOutPort.upsert(bld.id(), categoryId, value);
             source = Source.AI;
@@ -147,7 +126,7 @@ public class RecommendService {
         );
 
         Set<Integer> cidSet = Set.of(categoryId);
-        if (uid != null) {
+        if(uid != null) {
             loginSearchPort.upsertubid(uid, bld.id());
             searchCategoryPort.upsertubcS(uid, bld.id(), cidSet);
         }
@@ -167,13 +146,10 @@ public class RecommendService {
                 .build();
     }
 
-    /**
-     * ✅ 범위 검색 - Top 10 건물 유지 (변경 없음)
-     */
     @Transactional
     public RangeResponse getRange(RangeRequest req, Long uid) {
         final String categoryName = req.getCategory();
-        final Integer categoryId = categoryPort.getIdByName(categoryName);
+        final Integer categoryId  = categoryPort.getIdByName(categoryName);
 
         record R(RangeRequest.Point pt, GeoBuildingService.ResolvedBuilding bld) {}
         List<R> resolved = req.getPoints().stream()
@@ -199,16 +175,17 @@ public class RecommendService {
             int bldId = r.bld().id();
             if (!ensured.add(bldId)) continue; // 이미 처리한 건물
 
-            if (inOutPort.get(bldId, categoryId).isEmpty()) {
+            Optional<List<Double>> hit = inOutPort.get(r.bld.id(), categoryId);
+            List<Double> value;
+            if (hit.isEmpty()) {
                 // AI 전체 응답 한 번 받아 모든 카테고리 upsert
-                JsonNode aiRaw = aiServerClient.requestAll(r.bld().id(), r.bld().lat(), r.bld().lng());
-                Map<String, List<Double>> byCat = aiResponseParser.toCategoryMetricListV2(aiRaw);
-                Map<String, Integer> nameToId = categoryPort.getIdsByNames(byCat.keySet());
-                byCat.forEach((name, v) -> {
-                    Integer cid = nameToId.get(name);
-                    if (cid != null) inOutPort.upsert(bldId, cid, v);
-                });
+                JsonNode aiRaw = aiServerClient.requestCategory(r.bld.id(),r.bld.lat(), r.bld.lng(),categoryName);
+                value = aiResponseParser.toCategoryMetricV2(aiRaw, categoryName);
             }
+            else {
+                value = hit.get();
+            }
+            inOutPort.upsert(r.bld.id(), categoryId, value);
 
             if (uid != null) {
                 loginSearchPort.upsertubid(uid, bldId);
@@ -216,41 +193,48 @@ public class RecommendService {
             }
         }
 
-        // ✅ Top 10 건물만 선별 (유지)
-        List<RangeResponse.Item> items = resolved.stream()
-                .map(r -> {
-                    List<Double> v = inOutPort.get(r.bld().id(), categoryId).orElse(List.of(0.0));
-
-                    // 점수 계산 (평균값)
-                    double avgScore = v.stream()
-                            .mapToDouble(Double::doubleValue)
-                            .average()
-                            .orElse(0.0);
-
-                    return new ScoredBuilding(
-                            RangeResponse.Item.builder()
-                                    .buildingId(r.bld().id())
-                                    .category(categoryName)
-                                    .lat(r.pt().getLat())   // 숫자(BigDecimal) 유지
-                                    .lng(r.pt().getLng())   // 숫자(BigDecimal) 유지
-                                    .survivalRate(v)
-                                    .build(),
-                            avgScore
-                    );
-                })
-                .sorted((a, b) -> Double.compare(b.score, a.score)) // ✅ 점수 내림차순 정렬
-                .limit(10) // ✅ Top 10 건물 유지
-                .map(scored -> scored.item)
-                .collect(Collectors.toList());
+        List<RangeResponse.Item> items = resolved.stream().map(r -> {
+            List<Double> v = inOutPort.get(r.bld().id(), categoryId).orElse(null);
+            return RangeResponse.Item.builder()
+                    .buildingId(r.bld().id())
+                    .category(categoryName)
+                    .lat(r.pt().getLat())   // 숫자(BigDecimal) 유지
+                    .lng(r.pt().getLng())   // 숫자(BigDecimal) 유지
+                    .survivalRate(v)
+                    .build();
+        }).toList();
 
         return RangeResponse.builder()
-                .items(items) // ✅ Top 10 건물만 반환
+                .items(items)
                 .build();
     }
 
-    /**
-     * ✅ 정렬용 헬퍼 레코드들
-     */
-    private record ScoredCategory(RecommendResponse.CategoryResult result, double score) {}
-    private record ScoredBuilding(RangeResponse.Item item, double score) {}
+    @Transactional
+    public ExplainResponse SingleIndustryExplain(ExplainRequest req) {
+        final Integer buildingId = req.getBuilding_id();
+        final String categoryName = req.getCategory();
+        final Integer categoryId = categoryPort.getIdByName(categoryName);
+
+        Optional<String> opt = inOutPort.findExplanation(buildingId, categoryId);
+
+        if (opt.isPresent()) {
+            return ExplainResponse.builder()
+                    .building_id(buildingId)
+                    .category(categoryName)
+                    .explanation(opt.get())
+                    .build();
+        }
+
+        var bld = buildingPort.findByIdsList(List.of(buildingId)).getFirst();
+
+        JsonNode aiRaw = aiServerClient.requestGms(buildingId,bld.lat(), bld.lng(),categoryName);
+        String explain = aiResponseParser.toCategoryGMSV2(aiRaw);
+        inOutPort.upsertexplain(bld.id(), categoryId, explain);
+
+        return ExplainResponse.builder()
+                .building_id(buildingId)
+                .category(categoryName)
+                .explanation(explain)
+                .build();
+    }
 }
